<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSmp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:text="@string/sample_rate" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:entries="@array/sample_rate_table" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLang"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="50dp"
            android:gravity="center|start"
            android:text="@string/recog_language" />

        <Spinner
            android:id="@+id/spinnerLang"
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="50dp"
            android:entries="@array/lang_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recognize_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/recognize_file" />

        <Button
            android:id="@+id/recognize_mic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/recognize_microphone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recognize_loopback"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/recognize_loopback"/>

        <ToggleButton
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textOff="@string/pause"
            android:textOn="@string/continueRecognition"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbHoverLrc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_hover_lrc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/partial_result_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="top"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/final_result_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="top"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_orange_dark" />
        <TextView
            android:id="@+id/wordstat_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="top"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>
